<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expressions</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="espah">Espah</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="reenter">Re-enter Password</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="loggedIn">Logged in!</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_menu">Menu</string>
    <string name="play_with_friends">Play With Friends</string>
    <string name="play_publicly">Play Publicly</string>
    <string name="play_friends_desc">Coming soon! Share and guess photos from your friends</string>
    <string name="title_activity_take_photo">Selfie this expression!</string>
    <string name="title_activity_guess">What expression is this?</string>
    <string name="title_activity_out_of_pictures">OutOfPictures</string>
    <string name="action_signout">Sign out</string>
    <string name="title_activity_out_of_questions">OutOfQuestions</string>
    <string name="title_activity_out_of_everything">OutOfEverything</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="action_feedback">Feedback</string>

</resources>
