<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/espur_purple"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context="me.ivanity.espah.SignUp">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:inputType="text"
        android:hint="@string/username"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:padding="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:hint="@string/email"
        android:layout_below="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/password"
        android:layout_below="@+id/editText3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:hint="@string/reenter"
        android:layout_below="@+id/editText2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp" />

    <info.hoang8f.widget.FButton
        android:textColor="@color/white"
        fbutton:buttonColor="@color/espur_lightblue"
        fbutton:cornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:id="@+id/button"
        android:singleLine="true"
        android:layout_below="@+id/editText4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:onClick="signUp"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>

